# alterego

./: .gitignore  DESIGN.md  LICENSE  PRODUCT.md  README.md  pyproject.toml
alterego/: __init__.py  background.py  cli.py  clips.py  cuts.py  design.py  disguise.py  enhance.py  faces.py  ffmpeg_tools.py  fillers.py  live.py  live_voice.py  pipeline.py  recorder.py  settings.py  studio.py  tracking.py  video_io.py  voice.py
alterego/ui/: app.js  canonical.js  index.html  topology.js
docs/: GUIDE.md  HANDOFF.md  ROADMAP.md  rebuild-guide.html
remotion/: package-lock.json  package.json
remotion/src/: Captions.tsx  Clip.tsx  Root.tsx  index.css
tests/: test_background.py  test_clips.py  test_cuts.py  test_design.py  test_disguise.py  test_fillers.py  test_live.py  test_live_voice.py  test_settings.py  test_tracking.py  test_voice.py
