[project]
name = "alterego"
version = "0.1.0"
description = "Terminal-first content studio: record, disguise your face, enhance, and cut — build in public without showing your real face."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    # Frame-by-frame video processing (reading, warping, writing)
    "opencv-python>=4.9",
    # Face landmark detection — 468 points per face, runs fast on CPU
    "mediapipe>=0.10.14",
    # Array math for the displacement fields that warp the face
    "numpy",
    # Bundled ffmpeg binary as a fallback if ffmpeg isn't on PATH
    "imageio-ffmpeg>=0.5",
]

[project.optional-dependencies]
# Word-level transcription for filler-word removal ("um", "uh", ...).
# Optional because the model download is ~75 MB; install with:
#   uv sync --extra speech
speech = ["faster-whisper>=1.0"]
# Real-time mode: virtual webcam output + live microphone processing.
# Optional because the virtual camera needs OBS's driver installed.
#   uv sync --extra live
live = ["pyvirtualcam>=0.11", "sounddevice>=0.4"]

[project.scripts]
# This makes `uv run alterego <command>` work from the terminal.
alterego = "alterego.cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["alterego"]
